kubernetes/apps/default/netbox/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "NetBox"
    gethomepage.dev/group: "Applications"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/homarr-labs/dashboard-icons/svg/netbox.svg"
    gethomepage.dev/href: "https://netbox.${DOMAIN}"
  name: netbox
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - netbox.${DOMAIN}
  rules:
    - backendRefs:
        - name: netbox
          namespace: default
          port: 80
